<resources>
    <string name="app_name">Blood Bank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hello_image_view_description">Image Description</string>
    <string name="splash_screen_text_blood_bank">Blood Bank</string>
    <string name="register_fragment_ll_tv">Please fill your info</string>
    <string name="register_fragment_ll_btn">Sign up</string>
    <string name="login_fragment_forget_passwrod"><u>Forget Password?</u></string>
    <string name="login_fragment_ll_btn">Sign In</string>
    <string name="forget_password_ll_send_btn">Send</string>
    <string name="register_fragment_et_email">Insert your email</string>
    <string name="register_fragment_ll_et_birth">Birthday</string>
    <string name="reg_fragment_ll_et_blood_type">Blood type</string>
    <string name="reg_fragment_ll_et_last_don">Last donation date</string>
    <string name="reg_fragment_ll_et_city">Your city/country</string>
    <string name="reg_fragment_ll_et_country">Your country</string>
    <string name="reg_fragment_ll_et_phone_num">Put your phone number</string>
    <string name="reg_fragment_ll_et_pass1">Enter password</string>
    <string name="reg_fragment_ll_et_pass2">Re-enter your password</string>
    <string name="reg_fragment_ll_et_username">Enter your name</string>
    <string name="login_fragment_register_words">No account? Create new one.</string>
</resources>