<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.register.RegisterFragment"
        android:background="@drawable/register_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/remachinescript_personal_use"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="10dp"
            android:hint="@string/app_name"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/register_fragment_ll_tv"
            android:gravity="center"/>

        <EditText
            android:id="@+id/reg_fragment_ll_et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:hint="@string/reg_fragment_ll_et_username"
            android:inputType="textPersonName"
            android:background="@drawable/et_custom_for_all"
            android:textSize="15sp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_username_icon_pack"
            android:drawablePadding="8dp"/>

        <EditText
            android:id="@+id/reg_fragment_ll_et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/register_fragment_et_email"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/et_custom_for_all"
            android:textSize="15sp"
            android:drawableStart="@drawable/ic_email_icon_pack"
            android:drawablePadding="8dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/reg_fragment_ll_et_birth"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="date"
            android:hint="@string/register_fragment_ll_et_birth"
            android:background="@drawable/et_custom_for_all"
            android:textSize="15sp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_date_icon_pack"
            android:drawablePadding="8dp"/>

        <Spinner
            android:id="@+id/reg_fragment_ll_et_blood_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:hint="@string/reg_fragment_ll_et_blood_type"
            android:background="@drawable/et_custom_for_all"/>

        <EditText
            android:id="@+id/reg_fragment_ll_et_last_don"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="date"
            android:background="@drawable/et_custom_for_all"
            android:textSize="15sp"
            android:hint="@string/reg_fragment_ll_et_last_don"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_date_icon_pack"
            android:drawablePadding="8dp"/>

        <Spinner
            android:id="@+id/reg_fragment_ll_et_country"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:background="@drawable/et_custom_for_all" />

        <Spinner
            android:id="@+id/reg_fragment_ll_et_city"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:background="@drawable/et_custom_for_all" />

        <EditText
            android:id="@+id/reg_fragment_ll_et_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="phone"
            android:background="@drawable/et_custom_for_all"
            android:textSize="15sp"
            android:hint="@string/reg_fragment_ll_et_phone_num"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_phone_call_icon_pack"
            android:drawablePadding="8dp"/>

        <EditText
            android:id="@+id/reg_fragment_ll_et_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:hint="@string/reg_fragment_ll_et_pass1"
            android:inputType="textPassword"
            android:background="@drawable/et_custom_for_all"
            android:textSize="15sp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_password_icon_pack"
            android:drawablePadding="8dp"/>

        <EditText
            android:id="@+id/reg_fragment_ll_et_pass_con"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/reg_fragment_ll_et_pass2"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:background="@drawable/et_custom_for_all"
            android:textSize="15sp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_password_icon_pack"
            android:drawablePadding="8dp"/>

        <Button
            android:id="@+id/reg_fragment_ll_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/register_fragment_ll_btn"
            android:textAllCaps="false"
            android:fontFamily="@font/pacifico"
            android:background="@drawable/btn_custom_for_all"/>

    </LinearLayout>
</ScrollView>