<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.login.LoginFragment"
        android:background="@drawable/register_background">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/login_fragment_banner"
            android:contentDescription="@string/hello_image_view_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="60"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_fragment_ll_et_0"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/et_custom_for_all"
                android:drawableStart="@drawable/ic_username_icon_pack"
                android:drawablePadding="8dp"
                android:hint="@string/app_name"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/login_fragment_ll_et_1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/et_custom_for_all"
                android:drawableStart="@drawable/ic_username_icon_pack"
                android:drawablePadding="8dp"
                android:hint="@string/app_name"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/login_fragment_ll_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="30dp"
                android:text="@string/login_fragment_forget_passwrod"
                android:textColor="#CAD5EC"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/login_fragment_ll_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/btn_custom_for_all"
                android:fontFamily="@font/pacifico"
                android:text="@string/login_fragment_ll_btn"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>